--- a/1. question.md
+++ b/1. question.md
@@ -1,7 +1,7 @@
 **Rostou v průběhu let mzdy ve všech odvětvích, nebo v některých klesají?**
 
 
-Mzdy v průběhu let vykazují růst ve většině odvětví, ale jsou zde určité sektory, kde dochází k poklesům.
+V rámci výzkumné otázky jsme použili data mezd 19 odvětví v České republice mezi lety 2006 až 2018. Z analýzy vyplývá, že mzdy v průběhu let vykazují růst ve většině odvětví, ale jsou zde i určité sektory, kde dochází k poklesům.
 
 - Každoroční růst: Sektory C (Zpracovatelský průmysl), H (Doprava a skladování), N (Administrativní a podpůrné činnosti), Q (Zdravotní a sociální péče), S (Ostatní činnosti)
 
