--- a/1. question.md
+++ b/1. question.md
@@ -1,4 +1,4 @@
-**Rostou v průběhu let mzdy ve všech odvětvích, nebo v některých klesají?**
+##Rostou v průběhu let mzdy ve všech odvětvích, nebo v některých klesají?##
 
 
 V rámci výzkumné otázky jsme použili data mezd 19 odvětví v České republice mezi lety 2006 až 2018. Z analýzy vyplývá, že mzdy v průběhu let vykazují růst ve většině odvětví, ale jsou zde i určité sektory, kde dochází k poklesům.
@@ -12,7 +12,7 @@ V rámci výzkumné otázky jsme použili data mezd 19 odvětví v České repub
 Celkově lze říci, že mzdy v různých odvětvích obecně rostou, přesto existují specifická období a sektory, kde došlo k poklesu. Nejčastější pokles byl zaznamenán v letech 2009 a 2013.
 
 
-Níže naleznete jednotlivá odvětví a jejich poklesy:
+**Níže naleznete jednotlivá odvětví a jejich poklesy:**
 
 Mzdy pro sektor A: Zemědělství, lesnictví, rybářství
 - kromě roku 2009 mzdy v průběhu let rostou
