--- a/2. question.md
+++ b/2. question.md
@@ -1,4 +1,4 @@
-**Kolik je možné si koupit litrů mléka a kilogramů chleba za první a poslední srovnatelné období v dostupných datech cen a mezd?**
+##Kolik je možné si koupit litrů mléka a kilogramů chleba za první a poslední srovnatelné období v dostupných datech cen a mezd?##
 
 V rámci výzkumné otázky jsme použili data průměrných mezd v České republice a ceny potravin pro počáteční rok 2006 a poslední rok 2018. Z porovnání vyplývá, že v roce 2018 bylo možné si koupit více mléka i chleba než v roce 2006, což by mohlo naznačovat zlepšení kupní síly obyvatel během tohoto období.
 
