--- a/1. question.md
+++ b/1. question.md
@@ -1,4 +1,4 @@
-##Rostou v průběhu let mzdy ve všech odvětvích, nebo v některých klesají?##
+##Rostou v průběhu let mzdy ve všech odvětvích, nebo v některých klesají?
 
 
 V rámci výzkumné otázky jsme použili data mezd 19 odvětví v České republice mezi lety 2006 až 2018. Z analýzy vyplývá, že mzdy v průběhu let vykazují růst ve většině odvětví, ale jsou zde i určité sektory, kde dochází k poklesům.
