--- a/3. question.md
+++ b/3. question.md
@@ -1,4 +1,4 @@
 ## Která kategorie potravin zdražuje nejpomaleji (je u ní nejnižší percentuální meziroční nárůst)?
 
-V rámci výzkumné otázky jsme použili data průměrných cen potravin v České republice mezi lety 2006 až 2018. Z analýzy vyplývá, že nejpomaleji zdražující kategorií potravin jsou banány a minerální voda (o 0,9%), zatímco krystalový cukr dokonce zlevnil (o 2 %).
-Pro informaci, nejrychleji zdražující potravinou jsou papriky (o 7,3%).
+V rámci výzkumné otázky jsme použili data průměrných cen potravin v České republice mezi lety 2006 až 2018. Z analýzy vyplývá, že nejpomaleji zdražující kategorií potravin je vepřová pečeně s kostí a banány (0,9 %), zatímco krystalový cukr dokonce zlevnil (2 %).
+Pro informaci, nejrychleji zdražující potravinou jsou papriky (7,3 %).
