--- a/4. question.md
+++ b/4. question.md
@@ -1,3 +1,3 @@
 ## Existuje rok, ve kterém byl meziroèní nárùst cen potravin výraznì vyšší než rùst mezd (vìtší než 10 %)?
 
-V rámci výzkumné otázky jsme analyzovali data cen potravin a výšky mezd v Èeské republice za období od roku 2006 do 2018. Výsledky analýzy ukazují, že v žádném z tìchto let nebyl meziroèní nárùst cen potravin výraznì vyšší než rùst mezd, konkrétnì nebyl vìtší než 10 %. K meziroènímu nárùstu cen potravin došlo v letech 2012, 2013, 2015 a 2017, avšak tento nárùst nebyl výraznì vyšší než rùst mezd. V ostatních letech byl rùst cen potravin nižší oproti rùstu mezd.
+V rámci výzkumné otázky jsme analyzovali data cen potravin a výšky mezd v Èeské republice za období od roku 2006 do 2018. Výsledky analýzy ukazují, že v žádném z tìchto let nebyl meziroèní nárùst cen potravin výraznì vyšší než rùst mezd, konkrétnì nebyl vìtší než 10 %. K meziroènímu nárùstu cen potravin došlo v letech 2007-2008, 2010, 2012-2015 a 2017, avšak tento nárùst nebyl výraznì vyšší než rùst mezd. V ostatních letech byl rùst cen potravin nižší oproti rùstu mezd.
