--- a/1. question.md
+++ b/1. question.md
@@ -5,9 +5,9 @@ V rámci výzkumné otázky jsme použili data mezd 19 odvětví v České repub
 
 - Každoroční růst: Sektory C (Zpracovatelský průmysl), H (Doprava a skladování), N (Administrativní a podpůrné činnosti), Q (Zdravotní a sociální péče), S (Ostatní činnosti)
 
-- Převážně růst s občasnými poklesy: Většina ostatních sektorů, například sektor A (Zemědělství), sektor E (Zásobování vodou), sektor F (Stavebnictví), sektor G (Velkoobchod a maloobchod), sektor I (Ubytování a stravování), sektor J (Informační a komunikační činnosti), sektor K (Peněžnictví a pojišťovnictví), sektor L (Činnosti v oblasti nemovitostí), sektor M (Činnosti v oblasti nemovitostí), sektor P (Vzdělávání), sektor R (Kulturní a zábavní činnosti)
+- Převážně růst s občasnými poklesy: Většina ostatních sektorů, například sektor A (Zemědělství), sektor E (Zásobování vodou), sektor F (Stavebnictví), sektor G (Velkoobchod a maloobchod), sektor I (Ubytování a stravování), sektor J (Informační a komunikační činnosti), sektor K (Peněžnictví a pojišťovnictví), sektor L (Činnosti v oblasti nemovitostí), sektor M (Profesní, vědecké a technické činnosti), sektor P (Vzdělávání), sektor R (Kulturní a zábavní činnosti)
 
-- Výraznější období poklesu: Sektory B (Těžba a dobývání) a D (Výroba a rozvod elektřiny) měly významné poklesy v letech 2013–2016.
+- Výraznější období poklesu: Sektory B (Těžba a dobývání) a D (Výroba a rozvod elektřiny) měly významné poklesy během let 2013-2016.
 
 Celkově lze říci, že mzdy v různých odvětvích obecně rostou, přesto existují specifická období a sektory, kde došlo k poklesu. Nejčastější pokles byl zaznamenán v letech 2009 a 2013.
 
@@ -25,7 +25,7 @@ Mzdy pro sektor C: Zpracovatelský průmysl
 - každoroční růst
 
 Mzdy pro sektor D: Výroba a rozvod elektřiny, plynu, tepla a klimatiz. vzduchu
-- v roce 2013 pokles, poté růst a mezi lety 2013 a 2016 pokles
+- v roce 2013 pokles, poté růst a mezi lety 2013 a 2015 pokles
 - od roku 2017 růst
 
 Mzdy pro sektor E: Zásobování vodou; činnosti související s odpady a sanacemi
@@ -47,19 +47,19 @@ Mzdy pro sektor J: Informační a komunikační činnosti
 - kromě roku 2013 mzdy v průběhu let rostou
 
 Mzdy pro sektor K: Peněžnictví a pojišťovnictví
-- kromě roku 2013 mzdy v průběhu let rostou (ale až v roce 2017 se dostávají nad mzdy v roce 2012)
+- kromě roku 2013 mzdy v průběhu let rostou (ale až v roce 2017 se dostávají nad mzdy z roku 2012)
 
 Mzdy pro sektor L: Činnosti v oblasti nemovitostí
 - kromě roku 2013 mzdy v průběhu let rostou
 
-Mzdy pro sektor M: Činnosti v oblasti nemovitostí
+Mzdy pro sektor M: Profesní, vědecké a technické činnosti
 - kromě roku 2010 a 2013 mzdy v průběhu let rostou
 
 Mzdy pro sektor N: Administrativní a podpůrné činnosti
 - každoroční růst
 
 Mzdy pro sektor O: Veřejná správa a obrana; povinné sociální zabezpečení
-- v 2010 a 2011 pokles, poté růst (ale až v roce 2014 se dostávají nad mzdy v roce 2009)
+- v 2010 a 2011 pokles, poté růst (ale až v roce 2014 se dostávají nad mzdy z roku 2009)
 
 Mzdy pro sektor P: Vzdělávání
 - kromě roku 2010 mzdy v průběhu let rostou
