--- a/5. question.md
+++ b/5. question.md
@@ -8,7 +8,7 @@ Konkrétnì platí, že:
 
 - **Normální rùst HDP** (normal GDP increase) také vede k rùstu mezd a cen potravin, avšak tento rùst nemusí být vždy výrazný.
 
-- **Pokles HDP** (GDP decrease) vede k poklesu mezd a cen potravin, i když nìkdy mùže dojít ke zvýšení mezd i cen potravin navzdory poklesu HDP (napøíklad v roce 2012).
+- **Pokles HDP** (GDP decrease) obèas vede k poklesu mezd a cen potravin, i když nìkdy naopak mùže dojít ke zvýšení mezd i cen potravin navzdory poklesu HDP (napøíklad v letech 2012 a 2013).
 
 Významný rùst HDP tedy má tendenci se projevit výraznìjším rùstem mezd a cen potravin jak ve stejném roce, tak i v následujícím roce. Avšak ne vždy je tento vliv jednoznaèný, protože nìkteré roky s poklesem HDP ukázaly rùst mezd a cen potravin.
 
